<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51A831">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@color/time_color"
        android:text="@string/title"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:contentDescription="@string/time"
        android:text="@string/time"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:contentDescription="@string/date"
        android:text="@string/date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintTop_toBottomOf="@id/time" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:contentDescription="@string/description"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:text="@string/description"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/date" />

</androidx.constraintlayout.widget.ConstraintLayout>
